[package]
name = "func"
version = "0.1.0"
authors = ["Áron Derényi"]
edition = "2021"
description = "A crate that helps creating colsures from function pointers"
repository = "https://github.com/AronDerenyi/Func"
license = "MIT"

[dependencies]

[[example]]
name = "example"
path = "examples/example.rs"
